--- a/PI/report/slides/presentation.tex
+++ b/PI/report/slides/presentation.tex
@@ -66,6 +66,7 @@
 
 \section{Test Methodology}
 
+\begin{minipage}{.45\textwidth}
 \begin{frame}[plain]
 	\frametitle{Test Machines}
 		\begin{center}
@@ -92,6 +93,7 @@
 			\end{table}
 		\end{center}
 \end{frame}
+\end{minipage}
 
 \begin{frame}[plain]
 	\frametitle{Test Parameters}
