--- a/PI/openmp/report/slides/presentation.tex
+++ b/PI/openmp/report/slides/presentation.tex
@@ -260,11 +260,13 @@
 	\end{center}
 \end{frame}
 
-\section{Questions}
 \begin{frame}
-	\titlepage
-	
-	
+\titlepage
+	\begin{center}
+		\Huge\bfseries
+		- ? -
+	\end{center}
 \end{frame}
+
 
 \end{document}%	end presentation
